--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "axios": "^0.21.1",
+    "cookie": "^0.4.1",
     "next": "latest",
+    "next-auth": "^3.27.0",
     "next-images": "^1.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
