--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "axios": "^0.21.1",
     "cookie": "^0.4.1",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.9",
     "next": "latest",
     "next-auth": "^3.27.0",
