--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
         "baseUrl": ".",
         "paths": {
             "@/components/*":["components/*"],
+            "@/redux/*":["redux/*"],
         }
     }
 }
