--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ GOOGLE_CLIENT_SECRET=
 
 FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
+
+RAJA_ONGKIR_API_KEY=
+RAJA_ONGKIR_URL=
+RAJA_ONGKIR_COURIER=jne
+RAJA_ONGKIR_ORIGIN=51
