UI and Payment Test

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,7 @@
         "paths": {
             "@/components/*":["components/*"],
             "@/redux/*":["redux/*"],
+            "@/config/*":["config/*"],
         }
     }
 }
