--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-icons": "^4.2.0",
     "react-number-format": "^4.6.3",
     "react-redux": "^7.2.4",
-    "react-toastify": "^7.0.4"
+    "react-toastify": "^7.0.4",
+    "xendit-node": "^1.15.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
