--- a/package.json
+++ b/package.json
@@ -8,33 +8,33 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.2.0",
-    "@heroicons/react": "^1.0.1",
+    "@headlessui/react": "^1.4.1",
+    "@heroicons/react": "^1.0.4",
     "@lottiefiles/lottie-player": "^1.3.1",
-    "@reduxjs/toolkit": "^1.6.0",
+    "@reduxjs/toolkit": "^1.6.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "cookie": "^0.4.1",
     "midtrans-client": "^1.2.5",
     "moment": "^2.29.1",
-    "mongodb": "^3.6.9",
-    "next": "latest",
-    "next-auth": "^3.27.0",
+    "mongodb": "^3.7.1",
+    "next": "^11.1.2",
+    "next-auth": "^3.29.0",
     "next-images": "^1.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
-    "react-number-format": "^4.6.3",
-    "react-redux": "^7.2.4",
+    "react-number-format": "^4.7.3",
+    "react-redux": "^7.2.5",
     "react-toastify": "^7.0.4",
-    "xendit-node": "^1.15.0"
+    "xendit-node": "^1.16.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "autoprefixer": "^10.3.4",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.15"
   }
 }
