--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^11.1.2",
     "next-auth": "^3.29.0",
     "next-images": "^1.8.1",
+    "nextjs-cors": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
