--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "axios": "^0.21.4",
     "cookie": "^0.4.1",
+    "cors": "^2.8.5",
     "midtrans-client": "^1.2.5",
     "moment": "^2.29.1",
     "mongodb": "^3.7.1",
