--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "next": "^11.1.2",
     "next-auth": "^3.29.0",
     "next-images": "^1.8.1",
-    "nextjs-cors": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-number-format": "^4.7.3",
     "react-redux": "^7.2.5",
     "react-toastify": "^7.0.4",
+    "request": "^2.88.2",
     "xendit-node": "^1.17.0"
   },
   "devDependencies": {
