--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^11.1.2",
     "next-auth": "^3.29.0",
     "next-images": "^1.8.1",
+    "next-pagination": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
