--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-number-format": "^4.7.3",
     "react-redux": "^7.2.5",
     "react-toastify": "^7.0.4",
+    "swiper": "^7.3.1",
     "xendit-node": "^1.17.0"
   },
   "devDependencies": {
