--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^7.2.6",
     "react-toastify": "^8.1.0",
     "swiper": "^7.3.1",
+    "web-vitals": "^2.1.2",
     "xendit-node": "^1.19.1"
   },
   "devDependencies": {
