--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
+    "react-loading-overlay": "^1.0.1",
     "react-number-format": "^4.8.0",
     "react-redux": "^7.2.6",
     "react-toastify": "^8.1.0",
