--- a/package.json
+++ b/package.json
@@ -10,26 +10,29 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
-    "@lottiefiles/lottie-player": "^1.5.3",
-    "@reduxjs/toolkit": "^1.6.2",
+    "@lottiefiles/lottie-player": "^1.5.4",
+    "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.21.4",
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
     "midtrans-client": "^1.3.0",
     "moment": "^2.29.1",
     "mongodb": "^3.7.3",
-    "next": "^11.1.3",
+    "next": "^12.0.7",
     "next-auth": "^3.29.0",
     "next-images": "^1.8.4",
-    "next-pagination": "^3.1.0",
+    "next-pagination": "^3.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
     "react-loading-overlay": "^1.0.1",
-    "react-number-format": "^4.8.0",
+    "react-markdown": "^7.1.1",
+    "react-number-format": "^4.9.0",
     "react-redux": "^7.2.6",
     "react-toastify": "^8.1.0",
-    "swiper": "^7.3.1",
+    "remark-gfm": "^3.0.1",
+    "sharp": "^0.29.3",
+    "swiper": "^7.4.1",
     "web-vitals": "^2.1.2",
     "xendit-node": "^1.19.1"
   },
@@ -38,8 +41,8 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.5.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.0"
+    "autoprefixer": "^10.4.1",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.8"
   }
 }
